# icepanic

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  ICEPANIC.NFO  Makefile.amiga  README.md  plan.md
.agents/skills/pixel-game-sprite-sheet-skill/: README.md  SKILL.md
.agents/skills/pixel-game-sprite-sheet-skill/palettes/: amiga32_reference.hex
.agents/skills/pixel-game-sprite-sheet-skill/scripts/: sprite_sheet_tools.py
.agents/skills/pixel-game-sprite-sheet-skill/templates/: prompts.md
assets/: fun_agent_bombproc_baseline.csv  fun_agent_bombproc_baseline.json  fun_agent_bombproc_candidate_final.csv  fun_agent_bombproc_candidate_final.json  fun_agent_bombproc_delta_final.json  fun_agent_postfix_recalib_baseline.csv  fun_agent_postfix_recalib_baseline.json  fun_agent_postfix_recalib_delta.json  fun_agent_postfix_recalib_trend.json  fun_agent_postfix_recalib_tuned.csv  fun_agent_postfix_recalib_tuned.json  fun_agent_skillloop_dbg_baseline.csv  fun_agent_skillloop_dbg_baseline.json  fun_agent_skillloop_dbg_delta_tuned_v5.json  fun_agent_skillloop_dbg_tuned_v5.csv  fun_agent_skillloop_dbg_tuned_v5.json  procgen_good_levels.md  procgen_wfc_corpus.json  tile_strip_16x16_5bpl.txt  tileset_manifest.txt  wfc_train_samples.jsonl  wfc_train_sweep_baseline.csv  wfc_train_sweep_baseline.json  wfc_train_sweep_candidate.csv  wfc_train_sweep_candidate.json  wfc_train_sweep_delta.json
src/core/: game.c  game.h  procgen_wfc_templates.h  version.h
src/platform_amiga/: amiga_assets.c  amiga_assets.h  amiga_assets_ocs.c  amiga_assets_ocs.h  amiga_sfx_assets.c  amiga_sfx_assets.h  amiga_sfx_assets_ocs.c  amiga_sfx_assets_ocs.h  ice_panic_ocs.c  main.asm  main.c  main.i
src/platform_sdl/: main.c
src/tools/: fun_agent.c  iab_loader_demo.c
tests/: test_core.c
tools/: build_amiga_adf.py  build_amiga_assets_ocs.py  build_amiga_bob_assets.py  build_amiga_resource_bundle.py  build_amiga_sfx_assets.py  build_amiga_sfx_assets_ocs.py  build_fun_agent_ci_comment.py  build_procgen_wfc_corpus.py  build_tileset.py  build_title_overlay.py  check_iab_parity.py  compare_fun_agent_sweeps.py  convert_frame_dump_to_bitplanes.py  generate_deterministic_frame_dump.py  profile_fun_agent_history.py  run_amiga_pipeline_smoke.ps1  run_fun_agent_ci_report.py  run_fun_agent_sweep.py  test_build_procgen_wfc_corpus.py  validate_planar_assets.py
